--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
